*2.2.1 [RC2 or 2.2 final]*

* Update Prototype to 1.6.0.3 [sam]


*2.2.0 [RC1] (October 24th, 2008)*

* Fixed that sqlite would report "db/development.sqlite3 already exists" whether true or not on db:create #614 [Antonio Cangiano]

* Added config.threadsafe! to toggle allow concurrency settings and disable the dependency loader [Josh Peek]

* Turn cache_classes on by default [Josh Peek]

* Added configurable eager load paths. Defaults to app/models, app/controllers, and app/helpers [Josh Peek]

* Introduce simple internationalization support.  [Ruby i18n team]

* Make script/plugin install <plugin> -r <revision> option work with git based plugins. #257. [Tim Pope Jakub Kuźma]. Example:

  script/plugin install git://github.com/mislav/will_paginate.git -r agnostic # Installs 'agnostic' branch
  script/plugin install git://github.com/dchelimsky/rspec.git -r 'tag 1.1.4'

* Added Rails.initialized? flag [Josh Peek]

* Make rake test:uncommitted work with Git. [Tim Pope]

* Added Thin support to script/server.  #488 [Bob Klosinski]

* Fix script/about in production mode.  #370 [Cheah Chu Yeow, Xavier Noria, David Krmpotic]

* Add the gem load paths before the framework is loaded, so certain gems like RedCloth and BlueCloth can be frozen.

* Fix discrepancies with loading rails/init.rb from gems.

* Plugins check for the gem init path (rails/init.rb) before the standard plugin init path (init.rb)  [Jacek Becela]

* Changed all generated tests to use the test/do declaration style [DHH]

* Wrapped Rails.env in StringInquirer so you can do Rails.env.development? [DHH]

* Fixed that RailsInfoController wasn't considering all requests local in development mode (Edgard Castro) [#310 state:resolved]


*2.1.0 (May 31st, 2008)*

* script/dbconsole fires up the command-line database client.  #102 [Steve Purcell]

* Fix bug where plugin init.rb files from frozen gem specs weren't being run.  (pjb3) [#122 state:resolved]
