@@ -8,6 +8,7 @@ task :default => :test
 desc 'Test the <%= file_name %> plugin.'
 Rake::TestTask.new(:test) do |t|
   t.libs << 'lib'
+  t.libs << 'test'
   t.pattern = 'test/**/*_test.rb'
   t.verbose = true
 end
