@@ -1,6 +1,6 @@
-require 'test/unit'
+require 'test_helper'
 
-class <%= class_name %>Test < Test::Unit::TestCase
+class <%= class_name %>Test < ActiveSupport::TestCase
   # Replace this with your real tests.
   test "the truth" do
     assert true
